# cargo-target

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml  run.py
src/: expressions.rs
tags_parser/: __init__.py  typing.py
tests/: test_pig_latinnify.py
